fix: update CorsConfig to allow wildcard patterns for Vercel and Railway deployments, and enhance auth error feedback