@@ -15,16 +15,21 @@ public class CorsConfig {
 
     private static final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(CorsConfig.class);
 
-    @Value("${app.cors.allowed-origins:http://localhost:5173,http://localhost:3000,https://*.vercel.app,https://*.onrender.com,https://*.netlify.app}")
+    @Value("${app.cors.allowed-origins:*}")
     private String allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        List<String> originsList = Arrays.asList(allowedOrigins.split(","));
-        configuration.setAllowedOriginPatterns(originsList);
-        log.info("CORS configured with allowedOriginPatterns: {}", originsList);
+        if ("*".equals(allowedOrigins.trim())) {
+            configuration.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            List<String> originsList = Arrays.asList(allowedOrigins.split(","));
+            configuration.setAllowedOriginPatterns(originsList);
+        }
+
+        log.info("CORS configured for origins: {}", allowedOrigins);
 
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
